# DQN-DRQN

./: .gitignore  README.md  exploration.ipynb  pyproject.toml
.ipynb_checkpoints/: exploration-checkpoint.ipynb
models/: cartpole_drqn_best_100K.pth  cartpole_drqn_best_20K.pth  cartpole_drqn_best_40K.pth  cartpole_drqn_best_75000.pth
notebooks/: cartpole_drqn.ipynb  exploration_dqn.ipynb  exploration_drqn.ipynb  post_stuff.ipynb
src/: main.py
src/models/: __init__.py  dqn.py
src/utils/: replay.py  train.py
